--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-hot-toast": "^2.4.1",
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.11.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-slideshow-image": "^4.2.1",
     "styled-components": "^5.3.10",
     "web-vitals": "^2.1.3"
